Segun yo ya termine la parte de carga de archivos de usuario, vehiculos y asociaciones

--- a/src/main/java/com/mycompany/parkplus/PantallaPark.form
+++ b/src/main/java/com/mycompany/parkplus/PantallaPark.form
@@ -27,16 +27,11 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Cargar Usuarios"/>
+                <Property name="text" type="java.lang.String" value="Cargar archivos"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
               </Events>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Cargar Vehiculos"/>
-              </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -176,9 +171,6 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="jRadioButton3">
       <Properties>
-        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-          <ComponentRef name="default"/>
-        </Property>
         <Property name="text" type="java.lang.String" value="Invitado"/>
       </Properties>
     </Component>
